--- a/src/app/lightswitch/lightswitch.component.html
+++ b/src/app/lightswitch/lightswitch.component.html
@@ -1,2 +1,5 @@
 <button type="button" (click)="clicked()">Click me!</button>
 <span>{message}</span>
+
+<button type="button" (click)="changeBg()">Change!</button>
+<p>If you press the Change button, the letters and background color will change :)</p>
